Made add button a touch smaller (to align with the spec) and fixed props syncing in the browser viewport

--- a/src/app/components/ActionButtons/AddButton/style.css
+++ b/src/app/components/ActionButtons/AddButton/style.css
@@ -1,15 +1,16 @@
 .add.outer {
   border: 1px solid #a2a2a2;
   border-radius: 2px;
-  width: 15px;
-  height: 15px;
+  width: 13px;
+  height: 13px;
   cursor: pointer;
+  margin-top: 2px;
 }
 
 .add.inner {
   background-color: #767676;
-  width: 15px;
-  height: 15px;
+  width: 13px;
+  height: 13px;
 }
 
 .add.outer.selected,
